--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,13 @@ header .logo {
     margin: 0 0 27px;
 }
 
-.explorer .button {
-    margin-top: 27px;
+button {
+    width: 218px;
+    height: 50px;
+    color: white;
+    font-size: 16px;
+    border-radius: 25px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+    border: transparent;
 }
