--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,17 @@
+/****** GENERAL******/
+
+:root {
+    --main-primaire-color: #9356DC;
+    --main-secondaire-color: #FF79DA;
+    --main-tertiaire-color: #99E2D0;
+}
 body {
     margin: 0px;
-    font-family: "Roboto", sans-serif;
+    font-family: "roboto", sans-serif;
     background-color: #F7F7F7;
 }
+
+/****** HEADER******/
 
 header {
     position: relative;
@@ -19,7 +28,9 @@ header .logo {
     margin-top: 14px;
     margin-bottom: 5px;
 }
-                                        /* LOCATION */
+
+/****** LOCATION ******/
+
 .location {
     display: flex;
     height: 50px;
@@ -34,9 +45,11 @@ header .logo {
     font-size: 16px;
     font-weight: 500;
 }
-                                        /* EXPLORER */
+/****** EXPLORER *******/
+
 .explorer {
     text-align: center;
+    padding-bottom: 57px;
 }
 
 .explorer h2 {
@@ -52,7 +65,8 @@ header .logo {
     margin: 0 0 27px;
 }
 
-button {
+.btn {
+    font-family: "Roboto";
     width: 218px;
     height: 50px;
     color: white;
@@ -61,4 +75,31 @@ button {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
     border: transparent;
+}
+
+.btn :hover {
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35)
+}
+
+/****** FONCTIONNEMENT ******/
+
+.fonctionnement {
+    background: white;
+    padding: 48px 20px 68px;
+}
+
+.fonctionnement h2 {
+    padding-left: 20px;
+}
+
+.choix li {
+    display: flex;
+    height: 72.38px;
+    background-color: #f7f7f7;
+    margin: 0 20px 23px 0;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+    align-items: center;
+    justify-content: space-evenly;
 }
