--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,9 @@
 /****** GENERAL******/
 
 :root {
-    --primaire-color: #9356DC;
-    --main-secondaire-color: #FF79DA;
-    --main-tertiaire-color: #99E2D0;
+    $couleur-primaire: #9356DC;
+    $couleur-secondaire: #FF79DA;
+    $couleur-tertiaire: #99E2D0;
 }
 body {
     margin: 0px;
@@ -21,7 +21,7 @@ header {
     background-color: #FFFFFF;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
-                                        /* LOGO */
+/****** LOGO ******/
 header .logo {
     width: 162px;
     height: 44px;
@@ -48,6 +48,9 @@ header .logo {
 /****** EXPLORER *******/
 
 .explorer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     padding-bottom: 57px;
 }
@@ -66,19 +69,20 @@ header .logo {
 }
 
 .btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
     font-family: "Roboto";
     width: 218px;
     height: 50px;
     color: white;
-    font-size: 16px;
     border-radius: 25px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
-    border: transparent;
 }
 
 .btn :hover {
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35)
 }
 
