--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ header {
   font-size: 10px;
   text-align: center;
   font-style: italic;
-  background-color: #FFFFFF;
+  background-color: #fff;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -24,7 +24,7 @@ header .logo {
 }
 
 /****** LOCATION ******/
-.location {
+.emplacement {
   display: flex;
   height: 50px;
   justify-content: center;
@@ -34,7 +34,7 @@ header .logo {
   background-color: #EAEAEA;
 }
 
-.location h2 {
+.emplacement h2 {
   font-size: 16px;
   font-weight: 500;
 }
@@ -47,8 +47,7 @@ header .logo {
   text-align: center;
   padding-bottom: 57px;
 }
-
-.explorer h2 {
+.explorer__h2 {
   margin-top: 39px;
   margin-bottom: 0;
   padding-left: 42px;
