--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
   margin: 0px;
   font-family: "roboto", sans-serif;
   background-color: #F7F7F7;
+  box-sizing: border-box;
 }
 
 /****** HEADER******/
@@ -10,7 +11,6 @@ header {
   position: relative;
   font-size: 10px;
   text-align: center;
-  font-style: italic;
   background-color: #fff;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
@@ -62,19 +62,20 @@ header .logo {
 
 .btn {
   display: flex;
+  width: 218px;
+  height: 50px;
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  font-family: "Roboto";
-  width: 218px;
-  height: 50px;
-  color: white;
+  color: #fff;
+  font-weight: 500;
+  background: linear-gradient(to top, #9356DC 0%, #FF79DA 100%);
   border-radius: 25px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
 }
 
 .btn :hover {
+  background: linear-gradient(to top, #be9aea 0%, #ffafe9 100%);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
 }
 
