--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,17 +27,17 @@ header {
 
 /****** LOCATION ******/
 
-.emplacement {
+.location {
     display: flex;
     height: 50px;
     justify-content: center;
     align-items: center;
     gap: 17px;
     color: #353535;
-    background-color: $background-emplacement;
+    background-color: $background-location;
 }
 
-.emplacement h2 {
+.location h2 {
     font-size: 16px;
     font-weight: 500;
 }
@@ -82,39 +82,39 @@ header {
 }
 
 
-/****** FONCTIONNEMENT ******/
+/****** FUNCTIONING ******/
 
-.fonctionnement {
+.functioning {
     background: white;
     padding: 48px 20px 68px;
     h2 {
         padding-left: 20px;
     }
-}
-
-li {
-    display: flex;
-    height: 72.38px;
-    background-color: #f7f7f7;
-    margin: 0 20px 23px 0;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
-    border-radius: 20px;
-    align-items: center;
-    justify-content: space-evenly;
-    i {
-        color: #7E7E7E;
-        &:hover {
-            color: $couleur-primaire;
+    li {
+        display: flex;
+        height: 72px;
+        background-color: #f7f7f7;
+        margin: 0 20px 23px 0;
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+        border-radius: 20px;
+        align-items: center;
+        justify-content: space-evenly;
+        i {
+            color: #7E7E7E;
+            &:hover {
+                color: $primary-color;
+            }
         }
     }
 }
 
-.nombre {
+
+.number {
     display: flex;
     position: absolute;
     width: 24px;
     height: 24px;
-    background: $couleur-primaire;
+    background: $primary-color;
     color: #fff;
     border-radius: 25px;
     justify-content: center;
