--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,7 +1,7 @@
-$couleur-primaire: #9356DC;
-$couleur-secondaire: #FF79DA;
-$couleur-tertiaire: #99E2D0;
-$background-emplacement: #EAEAEA;
+$primary-color: #9356DC;
+$secondary-color: #FF79DA;
+$tertiary-color: #99E2D0;
+$background-location: #EAEAEA;
 $background-explorer: #F7F7F7;
-$btn-linear-gradient: linear-gradient(to top, $couleur-primaire 0%, $couleur-secondaire 100%);
+$btn-linear-gradient: linear-gradient(to top, $primary-color 0%, $secondary-color 100%);
 $btn-linear-gradient-clair: linear-gradient(to top,#be9aea 0%, #ffafe9 100%);
