--- a/sass/main.scss
+++ b/sass/main.scss
@@ -86,15 +86,15 @@ header {
 
 .functioning {
     background: white;
-    padding: 48px 20px 68px;
-    h2 {
-        padding-left: 20px;
+    padding: 48px 20px 45px;
+    ol {
+        padding: 0;
     }
     li {
         display: flex;
         height: 72px;
         background-color: #f7f7f7;
-        margin: 0 20px 23px 0;
+        margin: 0 20px 23px 13px;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
         border-radius: 20px;
         align-items: center;
@@ -106,18 +106,92 @@ header {
             }
         }
     }
+    .number {
+        display: flex;
+        position: absolute;
+        width: 24px;
+        height: 24px;
+        background: $primary-color;
+        color: #fff;
+        border-radius: 25px;
+        justify-content: center;
+        align-items: center;
+        left: 21px;
+    }
 }
 
+/******RESTAURANTS******/
+.restaurants {
 
-.number {
+    h2 {
+        margin-top: 54px;
+        margin-left: 20px;
+    }
+}
+
+.restaurants-cards {
+    padding: 0 18px 66px;
+    .cards {
+        display: flex;
+        flex-direction: column;
+        gap: 18px;
+        .card {
+            position: relative;
+            width: auto;
+            height: 251px; 
+            border-radius: 15px;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+            
+            img {
+                width: 100%;
+                height: 66%;
+                object-fit: cover;
+                border-radius: 15px 15px 0 0;
+            }        
+            
+        }
+    }
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+.card-text {
     display: flex;
+    flex-direction: column;
+    .card-title {
+        font-size: 18px;
+        line-height: 20px;
+        margin: 0;
+        padding: 16px 0 5px 13px;
+    }
+}
+
+.card-subtitle {
+    left: 3.82%;
+    right: 23.53%;
+    top: 85.66%;
+    bottom: 4.78%;
+    font-size: 17px;
+    font-weight: 300;
+    padding: 0 0 12px 13px;
+    margin: 0;
+}
+
+.new {
+    display: flex;
+    background: $tertiary-color;
+    width: 80px;
+    height: 29px;
+    color: #008766;
     position: absolute;
-    width: 24px;
-    height: 24px;
-    background: $primary-color;
-    color: #fff;
-    border-radius: 25px;
-    justify-content: center;
     align-items: center;
-    left: 48px;
+    justify-content: center;
+    font-size: 14px;
+    font-weight: 500;
+    border-radius: 2px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    right: 20px;
+    top: calc(14% - 29px/2);
 }
