--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,12 @@ header .logo {
   background: linear-gradient(to top, #9356DC 0%, #FF79DA 100%);
   border-radius: 25px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  transition: transform 0.2s;
 }
 .btn:hover {
   background: linear-gradient(to top, #be9aea 0%, #ffafe9 100%);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+  transform: scale(1.05);
 }
 
 /****** FUNCTIONING ******/
@@ -156,8 +158,7 @@ a {
   margin: 0;
   padding: 16px 0 5px 13px;
 }
-
-.card-subtitle {
+.card-text .card-subtitle {
   left: 3.82%;
   right: 23.53%;
   top: 85.66%;
@@ -166,6 +167,14 @@ a {
   font-weight: 300;
   padding: 0 0 12px 13px;
   margin: 0;
+}
+
+.heart {
+  position: absolute;
+  right: 25px;
+  bottom: 40px;
+  width: 22px;
+  height: 22px;
 }
 
 .new {
@@ -183,6 +192,42 @@ a {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
   right: 20px;
   top: calc(14% - 14.5px);
+}
+
+/******FOOTER******/
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background: #353535;
+}
+footer h4 {
+  font-family: "Shrikhand";
+  font-size: 18px;
+  font-weight: 400;
+  font-style: italic;
+  color: #fff;
+  padding: 22px 25px;
+  margin: 0;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  color: #fff;
+  padding: 0 22px;
+  gap: 7px;
+  margin: 0;
+}
+ul i {
+  width: 11px;
+}
+ul span {
+  margin: 11px;
+}
+ul a {
+  color: #fff;
 }
 
 /*# sourceMappingURL=style.css.map */
