--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ header .logo {
 .functioning ol {
   padding: 0;
 }
-.functioning li {
+.functioning ol li {
   display: flex;
   height: 72px;
   background-color: #f7f7f7;
@@ -96,13 +96,14 @@ header .logo {
   align-items: center;
   justify-content: space-evenly;
 }
-.functioning li i {
+.functioning ol li i {
   color: #7E7E7E;
 }
-.functioning li i:hover {
+.functioning ol li i:hover {
   color: #9356DC;
 }
-.functioning .number {
+
+.number {
   display: flex;
   position: absolute;
   width: 24px;
@@ -158,7 +159,8 @@ a {
   margin: 0;
   padding: 16px 0 5px 13px;
 }
-.card-text .card-subtitle {
+
+.card-subtitle {
   left: 3.82%;
   right: 23.53%;
   top: 85.66%;
@@ -216,7 +218,7 @@ ul {
   flex-direction: column;
   list-style-type: none;
   color: #fff;
-  padding: 0 22px;
+  padding: 0 22px 22px 22px;
   gap: 7px;
   margin: 0;
 }
