--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
 .image {
   width: 100%;
+  height: 275px;
   object-fit: cover;
 }
 
@@ -43,12 +44,12 @@
   padding: 0px 13px 40px 13px;
   gap: 40px;
 }
-.formule .entrees {
+.formule .formule-title {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
-.formule .entrees h3 {
+.formule .formule-title h3 {
   margin: 0;
   font-size: 16px;
   font-weight: 300;
@@ -57,20 +58,45 @@
   width: 40px;
 }
 
-.entrees .cards {
+.menu-cards {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 12px;
   padding-top: 12px;
 }
-.entrees .cards .card {
+.menu-cards .menu-card {
+  width: 100%;
+  height: 69px;
   display: flex;
   flex-direction: row;
   align-items: center;
   background: #fff;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
   border-radius: 15px;
+}
+.menu-cards .menu-card .card-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 12px 16px 12px 15px;
+}
+.menu-cards .menu-card .card-content .card-title {
+  margin: 0;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.menu-card-text {
+  display: flex;
+  justify-content: space-between;
+  font-size: 15px;
+  font-weight: 300;
+}
+
+.price {
+  font-weight: 700;
+  color: #353535;
 }
 
 /****** GENERAL******/
@@ -137,6 +163,7 @@ header .logo {
   display: flex;
   width: 218px;
   height: 50px;
+  margin: auto;
   justify-content: center;
   align-items: center;
   text-decoration: none;
