--- a/sass/main.scss
+++ b/sass/main.scss
@@ -68,6 +68,7 @@ header {
     display: flex;
     width: 218px;
     height: 50px;
+    margin: auto;
     justify-content: center;
     align-items: center;
     text-decoration: none;
