--- a/sass/menus_restaurants.scss
+++ b/sass/menus_restaurants.scss
@@ -8,6 +8,7 @@
 
 .image {
     width: 100%;
+    height: 275px;
     object-fit: cover;
  }
 
@@ -21,6 +22,7 @@
 
 .menu-title {
     padding: 32px 17px 42px 17px;
+
     h2 {
         width: 100%;
         font-size: 28px;
@@ -43,7 +45,7 @@
     padding: 0px 13px 40px 13px;
     gap: 40px;    
     
-    .entrees {
+    .formule-title {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -59,20 +61,43 @@
     }
 }
 
-.entrees{
-    .cards {
+.menu-cards {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    padding-top: 12px;
+    .menu-card {
         width: 100%;
+        height: 69px;
         display: flex;
-        flex-direction: column;
-        gap: 12px;
-        padding-top: 12px;
-        .card {
+        flex-direction: row;
+        align-items: center;
+        background: #fff;
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+        border-radius: 15px;
+        .card-content {
+            width: 100%;
             display: flex;
-            flex-direction: row;
-            align-items: center;
-            background: #fff;
-            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
-            border-radius: 15px;
+            flex-direction: column;
+            padding: 12px 16px 12px 15px;
+            .card-title {
+                margin: 0;
+                font-size: 18px;
+                font-weight: 500;
+            }
         }
     }
+}
+
+.menu-card-text {
+    display: flex;
+    justify-content: space-between;
+    font-size: 15px;
+    font-weight: 300;
+}
+
+.price {
+    font-weight: 700;
+    color: #353535;
 }
