--- a/sass/main.scss
+++ b/sass/main.scss
@@ -244,3 +244,82 @@ ul {
         color: #fff;
     }
  }
+/****** Media queries******/
+
+/****** Tablette******/
+ @media screen and ( min-width: 768px) and (max-width: 1023px) {
+    .explorer{
+        padding-bottom: 30px;
+        h2{
+            margin: 30px 0 18px 0;
+            font-size: 30px;
+        }
+    }
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ /******Desktop******/
+@media screen and (min-width: 1024px) and (max-width: 2560px) {
+    .explorer{
+        padding-bottom: 30px;
+        h2 {
+            margin: 30px 0 18px 0;
+            font-size: 40px;
+        }
+    }
+
+    .functioning {
+        display: flex;
+        flex-direction: column;
+        .choice{
+            display: flex;
+            flex-direction: row;
+            li {
+                width: 323px;
+                .number{
+                    position: relative;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    left: -35px;
+                }
+            }
+        }
+    }
+
+    .restaurants-cards {
+        padding: 0 18px 30px;
+        .cards {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            row-gap: 50px;
+            column-gap: 100px;
+        }
+    }
+
+    footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        padding: 30px 25px;
+        h4 {
+            position: absolute;
+            right: 20px;
+        }
+    }
+}
