--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,6 @@
 body {
   margin: 0px;
   font-family: "roboto", sans-serif;
-  background-color: #F7F7F7;
   box-sizing: border-box;
 }
 
@@ -151,6 +150,7 @@ header .logo {
   align-items: center;
   text-align: center;
   padding-bottom: 57px;
+  background: #F7F7F7;
 }
 .explorer h2 {
   margin-top: 39px;
@@ -225,8 +225,11 @@ header .logo {
 }
 
 /******RESTAURANTS******/
+.restaurants {
+  background: #F7F7F7;
+}
 .restaurants h2 {
-  margin-top: 54px;
+  padding-top: 54px;
   margin-left: 20px;
 }
 
