--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -2,6 +2,6 @@ $primary-color: #9356DC;
 $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
 $background-location: #EAEAEA;
-$background-explorer: #F7F7F7;
+$background-explorer-restaurants: #F7F7F7;
 $btn-linear-gradient: linear-gradient(to top, $primary-color 0%, $secondary-color 100%);
 $btn-linear-gradient-clair: linear-gradient(to top,#be9aea 0%, #ffafe9 100%);
